--- a/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_slider.less
+++ b/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_slider.less
@@ -14,6 +14,12 @@
 		}
 		.item{width:100%;}
 	}
+
+     /* custom style */
+     .owl-stage-outer {
+         height: 417px;
+     }
+     /* end custom style */
  }
  .cdz-slider-banners{padding-top:0!important}
 
