rm data-migration-tool

--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/templates/html/copyright.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/templates/html/copyright.phtml
@@ -4,8 +4,17 @@
  * See COPYING.txt for license details.
  */
 ?>
-<small class="copyright">    
+<small class="copyright">
     <span class="f-left">
-		<?php /* @escapeNotVerified */ echo $block->getCopyright() ?>		
-	</span>						
+		<?php /* @escapeNotVerified */ echo $block->getCopyright() ?>
+	</span>
+    <span>
+        <a href="#">Privacy Policy</a>
+    </span>
+    <span>
+        <a href="#">Terms of Service</a>
+    </span>
+    <span>
+        <a href="#">Sitemap</a>
+    </span>
 </small>
