--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/_typography.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/_typography.less
@@ -148,7 +148,8 @@
 			.lib-css(margin-bottom, @space-s);
 	}
 	.space-base{
-		.lib-css(margin-bottom, @space-base);
+		//.lib-css(margin-bottom, @space-base);
+        margin-bottom: 24px;
 	}
 	.space-md{
 		.lib-css(margin-bottom, @space-md);
