--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_grid-col.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_grid-col.less
@@ -1051,14 +1051,23 @@
         margin-left: 10px;
         margin-right: 34px;
     }
-
     .col-search {
         width: 755px;
     }
-
     .col-cart {
         width: 197px;
         margin-left: 36px;
+    }
+    .col-warrany {
+        width: 292px;
+        margin-right: 200px;
+    }
+    .col-shipping {
+        width: 257px;
+        margin-right: 200px;
+    }
+    .col-support {
+        width: 239px;
     }
 
   .col-md-1 {
