--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_hoverbanner.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_hoverbanner.less
@@ -22,22 +22,22 @@
 			.abs-opacity(1);
 		}
 	}
-	&:hover{
-		a.product-item-photo{
-			.hover-image .product-image-container{
-				.abs-transition();
-				.abs-opacity(1);
-				//transform: scale(1,1);
-			}
-			.main-image .product-image-container{
-				.abs-opacity(0);
-				.abs-transition();
-				position:absolute;
-				top:0;
-				
-			}
-		}
-	}
+	//&:hover{
+	//	a.product-item-photo{
+	//		.hover-image .product-image-container{
+	//			.abs-transition();
+	//			.abs-opacity(1);
+	//			//transform: scale(1,1);
+	//		}
+	//		.main-image .product-image-container{
+	//			.abs-opacity(0);
+	//			.abs-transition();
+	//			position:absolute;
+	//			top:0;
+	//
+	//		}
+	//	}
+	//}
 }
 /*.products-grid .item{
 	.cdz-product-top{
@@ -66,7 +66,7 @@
 				.abs-transition();
 				position:absolute;
 				top:0;
-				
+
 			}
 		}
 	}
@@ -154,7 +154,7 @@
 .banner-border.style2:after{
     border-left: 5px solid #ffffff;
     border-right: 5px solid #ffffff;
-} 
+}
 .banner-border.style2:before{
     border-top: 5px solid #ffffff;
     border-bottom: 5px solid #ffffff;
@@ -176,11 +176,11 @@
     vertical-align: middle;
 }
 
-/*.loading:after, 
+/*.loading:after,
 .loading:before,*/
-.loader:after, 
+.loader:after,
 .loader:before,
-.qs-loader:after, 
+.qs-loader:after,
 .qs-loader:before {
 	position: absolute;
 	content: "";
