--- a/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
@@ -158,7 +158,7 @@
 
 .product.info.detailed {
     clear: both;
-   
+
     .additional-attributes {
         width: auto;
         .lib-table-bordered(
@@ -354,7 +354,7 @@
 						overflow:hidden;
 						.abs-opacity(0);
 						filter: alpha(opacity=0);
-						
+
 					}
 				}
             }
@@ -583,7 +583,7 @@
         }
         .price-box {
             display: block;
-            margin: 7px 0;
+            margin: 0;
         }
         .text {
             margin-right: 8px;
@@ -669,7 +669,7 @@
             .lib-vendor-prefix-flex-direction(column);
         }
         .product.media {
-            .lib-vendor-prefix-order(-1);	
+            .lib-vendor-prefix-order(-1);
         }
 		.product.media,
 		.product-info-main{
@@ -722,7 +722,7 @@
     .box-tocart {
         .action.tocart {
             margin-bottom: 0;
-			
+
         }
     }
 
@@ -1102,7 +1102,7 @@ body.catalog-product-compare-index {
 }
 
 //Detail custom
-& when (@media-common = true) {	
+& when (@media-common = true) {
 	.size-chart-content .close{display:none}
 	.size-chart-fashion{
 		position: relative;
@@ -1119,7 +1119,7 @@ body.catalog-product-compare-index {
 			.rtl-layout &{
 				right: auto;
 				left: 0;
-			}	
+			}
 		}
 	}
 	.box-tocart{
@@ -1153,7 +1153,7 @@ body.catalog-product-compare-index {
 			}
 			.qty-input{
 				float:left;
-				.input-text.qty{ 
+				.input-text.qty{
 					width:90px;
 					.lib-css(background, #fbfbfb);
 					margin:0 -1px;
@@ -1162,7 +1162,7 @@ body.catalog-product-compare-index {
 				}
 			}
 		}
-		
+
 		.actions{
 			clear:both;
 		}
@@ -1231,7 +1231,7 @@ body.catalog-product-compare-index {
 				background-position:2px 20px;
 			}
 		}
-		
+
 	}
 	.product-ads-content{
 		background:#f7f7f7;
