--- a/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_slider.less
+++ b/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_slider.less
@@ -14,13 +14,25 @@
 		}
 		.item{width:100%;}
 	}
-
-     /* custom style */
-     .owl-stage-outer {
-         height: 417px;
-     }
-     /* end custom style */
  }
+
+/* custom style */
+.slideshow-container {
+    .owl-carousel{
+        .owl-stage-outer {
+            height: 417px;
+        }
+    }
+}
+.product-style05 {
+    .owl-carousel{
+        .owl-stage-outer {
+            height: 329px;
+        }
+    }
+}
+/* end custom style */
+
  .cdz-slider-banners{padding-top:0!important}
 
  ///Button
