add new font and change product review module.

--- a/app/design/frontend/Codazon/fastest/fashion/web/css/custom.css
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/custom.css
@@ -9,3 +9,11 @@
     font-style: normal;
     font-display: block;
 }
+
+@font-face {
+    font-family: 'roboto-medium';
+    src:  url('fonts/Roboto-Medium.ttf');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+}
