--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/templates/product/view/gallery.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/templates/product/view/gallery.phtml
@@ -13,10 +13,10 @@
  */
 ?>
 <?php
-	$_optionHelper = $this->helper('Codazon\ThemeOptions\Helper\Data');			 
-	$width = $_optionHelper->getConfig('general_section/product_view/base_image_width') ?: $block->getImageAttribute('product_page_image_medium', 'width'); 	 
-	$height = $_optionHelper->getConfig('general_section/product_view/base_image_height') ?: $block->getImageAttribute('product_page_image_medium', 'height');	
-	$thumbWidth = 	$_optionHelper->getConfig('general_section/product_view/moreview_image_width') ?: $block->getImageAttribute('product_page_image_small', 'width');	
+	$_optionHelper = $this->helper('Codazon\ThemeOptions\Helper\Data');
+	$width = $_optionHelper->getConfig('general_section/product_view/base_image_width') ?: $block->getImageAttribute('product_page_image_medium', 'width');
+	$height = $_optionHelper->getConfig('general_section/product_view/base_image_height') ?: $block->getImageAttribute('product_page_image_medium', 'height');
+	$thumbWidth = 	$_optionHelper->getConfig('general_section/product_view/moreview_image_width') ?: $block->getImageAttribute('product_page_image_small', 'width');
 	$thumbHeight = 	$_optionHelper->getConfig('general_section/product_view/moreview_image_height') ?: $block->getImageAttribute('product_page_image_small', 'height');
 	$fullViewType = $_optionHelper->getConfig('general_section/product_view/full_view_type');
 	$allowFullScreen = is_null($fullViewType)?$block->getVar("gallery/allowfullscreen"):(($fullViewType!='pop_up')?'true':'false');
@@ -25,7 +25,7 @@
 ?>
 <script type="text/javascript">
 	<?php $requireJs = ($fullViewType == 'popup')?"'jquery','Magento_Catalog/js/cdzZoom','Magento_Ui/js/modal/modal','js/jquery.nicescroll.min'":"'jquery','Magento_Catalog/js/cdzZoom','Magento_Ui/js/modal/modal'"; ?>
-	
+
 	require([<?php echo $requireJs ?>],function ($) {
 		var imgModal = false, $imgBox = false;
 		var widthImage = <?php /* @escapeNotVerified */ echo $width; ?>;
@@ -34,7 +34,7 @@
 			/*var widthColumn = $('.columns').width();
 			var percentWidthImage = widthImage/widthColumn * 100;
 			var percentWidthInfo = 100 - percentWidthImage - 3;
-			if(percentWidthImage < 61)	
+			if(percentWidthImage < 61)
 			{
 				$('.product.media').css('width',percentWidthImage+'%');
 				$('.product-info-main').css('width',percentWidthInfo+'%');
@@ -103,8 +103,8 @@
 
     if (config.navtype === 'horizontal') {
         thumbBarHeight = config.thumbheight;
-    }    
-	
+    }
+
     loader.style.paddingBottom = ( config.height / config.width * 100) + "%";
 </script>
 <script type="text/x-magento-init">
@@ -141,6 +141,7 @@
                     "navtype": "<?php /* @escapeNotVerified */  echo $block->getVar("gallery/navtype"); ?>",
                     "navdir": "<?php /* @escapeNotVerified */  echo $block->getVar("gallery/navdir"); ?>"
                 },
+                "thumbmargin": 10,
                 "fullscreen": {
                     "nav": "<?= /* @escapeNotVerified */ $block->getVar("gallery/fullscreen/nav") ?>",
                     "loop": <?= /* @escapeNotVerified */ $block->getVar("gallery/fullscreen/loop") ? 'true' : 'false' ?>,
