--- a/app/design/frontend/Codazon/fastest/fashion/Codazon_ThemeOptions/web/css/product.css
+++ b/app/design/frontend/Codazon/fastest/fashion/Codazon_ThemeOptions/web/css/product.css
@@ -34,7 +34,7 @@
 
 .mg-product-block-text-content-bold {
     display: block;
-    font-family: Roboto;
+    font-family: roboto-medium;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
