--- a/app/design/frontend/Codazon/fastest/fashion/Codazon_ThemeOptions/web/css/product.css
+++ b/app/design/frontend/Codazon/fastest/fashion/Codazon_ThemeOptions/web/css/product.css
@@ -257,7 +257,7 @@
         font-size: 16px;
     }
     .mg-product-block-fourtables-content-part img {
-        width: 250px;
+        width: 100%;
         margin: 0 auto;
     }
 }
